--- a/src/translatorApp/textTranslate.css
+++ b/src/translatorApp/textTranslate.css
@@ -47,3 +47,24 @@ textarea {
   min-width: 300px;
   height: 150px;
 }
+
+@media all and (max-width: 768px) {
+  #root {
+    width: 90%;
+  }
+  h2 {
+    font-size: 1.5rem;
+    margin-bottom: 0.5rem;
+  }
+  select,
+  textarea,
+  button {
+    margin-top: 5px;
+    margin-bottom: 5px;
+  }
+  #translator,
+  #output {
+    display: flex;
+    flex-direction: column;
+  }
+}
