--- a/src/translatorApp/textTranslate.css
+++ b/src/translatorApp/textTranslate.css
@@ -62,6 +62,9 @@ textarea {
     margin-top: 5px;
     margin-bottom: 5px;
   }
+  textarea{
+    min-width: 100%;
+  }
   #translator,
   #output {
     display: flex;
